# Chat

./: .gitignore  .gitignore~  .tags  .tags_sorted_by_file  CMakeLists.txt  Client.cbp  Client.depend  Client.layout  Client.sln  Client.vcxproj  Client.vcxproj.filters  Makefile  README.md  capture.xpm  makefile
include/: ChatListItem.h  ChatPerson.h  ChatTabData.h  ChatTabUI.h  LoginDialog.h  Main.h  myRTC.h
src/: CMakeLists.txt  ChatListItem.cpp  ChatPerson.cpp  ChatTabData.cpp  ChatTabUI.cpp  LoginDialog.cpp  Main.cpp  Main.cpp~  myRTC.cpp
