FIND_PACKAGE(wxWidgets) 
IF(wxWidgets_FOUND)
	INCLUDE("${wxWidgets_USE_FILE}") 
	AUX_SOURCE_DIRECTORY(. DIR_CHAT_SRC) 
	SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin) 
	ADD_EXECUTABLE(Chat ${DIR_CHAT_SRC}) 
	TARGET_LINK_LIBRARIES(Chat ${wxWidgets_LIBRARIES}) 
ELSE(wxWidgets_FOUND)
	MESSAGE(FATAL_ERROR "wxWidgets not found") 
ENDIF(wxWidgets_FOUND) 

