FIND_PACKAGE(wxWidgets) 
IF(wxWidgets_FOUND)
	INCLUDE("${wxWidgets_USE_FILE}") 
	AUX_SOURCE_DIRECTORY(. DIR_SRC) 
	SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin) 
	ADD_EXECUTABLE(${CMAKE_PROJECT_NAME} ${DIR_SRC}) 
	TARGET_LINK_LIBRARIES(${CMAKE_PROJECT_NAME} ${wxWidgets_LIBRARIES}) 
ELSE(wxWidgets_FOUND)
	MESSAGE(FATAL_ERROR "wxWidgets not found") 
ENDIF(wxWidgets_FOUND) 

